--- a/packages/ethereum-viewer/package.json
+++ b/packages/ethereum-viewer/package.json
@@ -21,7 +21,8 @@
     "ts-essentials": "^9.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "@types/vscode": "^1.63.0"
   },
   "engines": {
     "vscode": "^1.63.0"
