--- a/packages/vscode-host-dupa/package.json
+++ b/packages/vscode-host-dupa/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vscode-web",
-  "version": "1.58.0",
-  "description": "Visual Studio Code for browser",
+  "name": "@dethcrypto/ethereum-viewer-vscode-host",
+  "license": "MIT",
+  "version": "0.1.0",
+  "description": "Visual Studio Host for Ethereum Viewer",
   "files": [
     "dist/*"
   ],
@@ -10,16 +11,6 @@
     "prepare-demo": "node prepare-demo.js",
     "demo": "node ./demo/http.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Felx-B/vscode-web.git"
-  },
-  "author": "Felix B",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Felx-B/vscode-web/issues"
-  },
-  "homepage": "https://github.com/Felx-B/vscode-web#readme",
   "devDependencies": {
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
