Add notification and welcome page (#5)
* Remove SCM from Workbench

* It broke :c

* Add window indicator

* Remove SCM icon

* Add notification

* Add welcome page

* Remove redundant code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,13 @@
     // TypeScript checks this
     "no-invalid-this": "off"
   },
-  "ignorePatterns": ["**/*.d.ts", "**/dist/**"]
+  "ignorePatterns": ["**/*.d.ts", "**/dist/**"],
+  "overrides": [
+    {
+      "files": ["./packages/vscode-host/src/**/*.ts"],
+      "rules": {
+        "simple-import-sort/imports": "off"
+      }
+    }
+  ]
 }
