--- a/packages/ethereum-viewer/package.json
+++ b/packages/ethereum-viewer/package.json
@@ -35,12 +35,5 @@
   "activationEvents": [
     "*"
   ],
-  "contributes": {
-    "commands": [
-      {
-        "command": "ethereum-viewer.helloWorld",
-        "title": "Hello World"
-      }
-    ]
-  }
+  "contributes": {}
 }
