support more networks (#21)
* Change all occurences of [Ethereum Viewer] to [Ethereum Code Viewer]

* Get API name from subdomain or search params

* Add explorer API keys

* Change vercel.json

* Remove trailing slash

* Test called URL

* Handle unverified contracts

* Test unverified error message

--- a/packages/ethereum-viewer/package.json
+++ b/packages/ethereum-viewer/package.json
@@ -27,7 +27,7 @@
   "engines": {
     "vscode": "^1.63.0"
   },
-  "displayName": "Ethereum Viewer",
+  "displayName": "Ethereum Code Viewer",
   "description": "View source of deployed Ethereum contracts in VSCode",
   "publisher": "hasparus",
   "categories": [
