--- a/vercel.json
+++ b/vercel.json
@@ -6,20 +6,8 @@
   },
   "rewrites": [
     {
-      "source": "/address/0x([0-9a-fA-F]*)",
+      "source": "/(address/|token/)?0x([0-9a-fA-F])*(\\/)?",
       "destination": "/index.html"
-    },
-    {
-      "source": "/address/0x([0-9a-fA-F]*?)/",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/address/0x([0-9a-fA-F]*?)/:path*",
-      "destination": "/:path*"
-    },
-    {
-      "source": "/address/:path*",
-      "destination": "/:path*"
     }
   ]
 }
