--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "copy-and-serve": "cd packages/vscode-host && yarn copy-and-serve",
     "lint": "eslint --ext .ts ./packages/*/src/**/*.ts",
     "lint:fix": "pnpm lint -- --fix",
-    "prepare-deploy": "cp ./vercel.json ./packages/vscode-host/dist"
+    "prepare-deploy": "cp ./vercel.json ./packages/vscode-host/dist",
+    "test": "mocha"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.14",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.12",
     "@types/webpack": "^5.28.0",
@@ -18,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "assert": "^2.0.0",
+    "earljs": "^0.1.12",
     "eslint": "^7",
     "eslint-config-typestrict": "^1.0.2",
     "eslint-plugin-import": "^2.25.2",
@@ -25,6 +28,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-unused-imports": "^1.1.5",
+    "jsdom": "^19.0.0",
     "mocha": "^9.1.3",
     "process": "^0.11.10",
     "serve": "^13.0.2",
