Fix contracts without settings and properly focus main file (#25)
* Contribute [open contract] command

* Fix contracts without settings and properly focus main file

* Run test and lint on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
 
       - run: pnpm install
       - run: pnpm build
+      - run: pnpm test
+      - run: pnpm lint
 
       - run: pnpm prepare-deploy
       # @todo is there a better way to write this? we want prod build from main
