--- a/packages/ethereum-viewer/package.json
+++ b/packages/ethereum-viewer/package.json
@@ -41,5 +41,11 @@
   "activationEvents": [
     "*"
   ],
-  "contributes": {}
+  "contributes": {
+    "commands": {
+      "command": "ethereum-viewer.open",
+      "category": "Ethereum Code Viewer",
+      "title": "Open smart contract source code"
+    }
+  }
 }
