--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .ts ./packages/*/src/**/*.ts",
     "lint:fix": "pnpm lint -- --fix",
     "prepare-deploy": "cp ./vercel.json ./packages/vscode-host/dist",
-    "test": "mocha"
+    "test": "mocha",
+    "check": "pnpm test && pnpm lint"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
