Add bookmarklet to the readme (#35)
* Add Etherscan link to status bar

* Add tests for bookmarklet

Yes, I know, it should be trivial, but I managed to have a bug in it.

* Describe bookmarklet in the readme

--- a/packages/ethereum-viewer/package.json
+++ b/packages/ethereum-viewer/package.json
@@ -10,7 +10,8 @@
     "watch": "webpack --watch",
     "pretest": "yarn run build",
     "lint": "eslint src --ext ts",
-    "serve": "serve --cors -l 5000 --ssl-cert ../../certs/localhost.pem --ssl-key ../../certs/localhost-key.pem"
+    "serve": "serve --cors -l 5000 --ssl-cert ../../certs/localhost.pem --ssl-key ../../certs/localhost-key.pem",
+    "supported-explorers": "ts-node ./scripts/supported-explorers"
   },
   "dependencies": {
     "fast-json-stable-stringify": "^2.1.0",
