--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "postinstall": "cd packages/vscode-host && yarn",
     "watch": "pnpm watch --filter ./packages",
     "build": "pnpm build --filter ./packages && cd packages/vscode-host && yarn build",
-    "serve": "cd packages/vscode-host && yarn serve",
+    "serve": "run-p serve:**",
+    "serve:host": "cd packages/vscode-host && yarn serve",
+    "serve:entrypoint": "pnpm serve --filter ./packages/entrypoint",
     "copy-and-serve": "cd packages/vscode-host && yarn copy-and-serve",
     "lint": "eslint --ext .ts ./packages/*/src/**/*.ts",
     "lint:fix": "pnpm lint -- --fix",
@@ -31,6 +33,7 @@
     "eslint-plugin-unused-imports": "^1.1.5",
     "jsdom": "^19.0.0",
     "mocha": "^9.1.3",
+    "npm-run-all": "^4.1.5",
     "process": "^0.11.10",
     "serve": "^13.0.2",
     "ts-loader": "^9.2.5",
