--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@typescript-eslint/parser": "^5.3.0",
     "assert": "^2.0.0",
     "earljs": "^0.1.12",
+    "esbuild": "^0.14.10",
+    "esbuild-register": "^3.3.2",
+    "typescript-register": "npm:esbuild-register@^3.3.2",
     "eslint": "^7",
     "eslint-config-typestrict": "^1.0.2",
     "eslint-plugin-import": "^2.25.2",
@@ -37,7 +40,6 @@
     "process": "^0.11.10",
     "serve": "^13.0.2",
     "ts-loader": "^9.2.5",
-    "ts-node": "^10.4.0",
     "typescript": "^4.5.3",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0"
