--- a/packages/ethereum-viewer/package.json
+++ b/packages/ethereum-viewer/package.json
@@ -11,7 +11,7 @@
     "pretest": "yarn run build",
     "lint": "eslint src --ext ts",
     "serve": "serve --cors -l 5000 --ssl-cert ../../certs/localhost.pem --ssl-key ../../certs/localhost-key.pem",
-    "supported-explorers": "ts-node ./scripts/supported-explorers"
+    "supported-explorers": "node -r esbuild-register ./scripts/supported-explorers"
   },
   "dependencies": {
     "fast-json-stable-stringify": "^2.1.0",
