Replace all mentions of 'Ethereum Code Viewer' with 'DethCode' (#51)
* Replace all mentions of 'Ethereum Code Viewer' with 'DethCode'

* Use new logo

* Update README.md

* Change last lowercase dethcode

--- a/packages/ethereum-viewer/package.json
+++ b/packages/ethereum-viewer/package.json
@@ -27,7 +27,7 @@
   "engines": {
     "vscode": "^1.63.0"
   },
-  "displayName": "Ethereum Code Viewer",
+  "displayName": "DethCode",
   "description": "View source of deployed Ethereum contracts in VSCode",
   "publisher": "hasparus",
   "categories": [
@@ -44,7 +44,7 @@
   "contributes": {
     "commands": {
       "command": "ethereum-viewer.open",
-      "category": "Ethereum Code Viewer",
+      "category": "DethCode",
       "title": "Open smart contract source code"
     }
   }
