--- a/packages/vscode-host/package.json
+++ b/packages/vscode-host/package.json
@@ -2,7 +2,7 @@
   "name": "@dethcrypto/ethereum-viewer-vscode-host",
   "license": "MIT",
   "version": "1.58.0",
-  "description": "Visual Studio Code host for Ethereum Code Viewer",
+  "description": "Visual Studio Code host for DethCode extension",
   "files": [
     "dist/*"
   ],
