--- a/packages/vscode-host/package.json
+++ b/packages/vscode-host/package.json
@@ -18,14 +18,6 @@
     "rebuild": "node ./scripts/rebuild",
     "copy-and-serve": "yarn build:copy-extensions && yarn serve"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Felx-B/vscode-web.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Felx-B/vscode-web/issues"
-  },
-  "homepage": "https://github.com/Felx-B/vscode-web#readme",
   "devDependencies": {
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
@@ -37,5 +29,8 @@
     "vscode-textmate": "^5.2.0",
     "tslog": "^3.3.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "engines": {
+    "node": "^18.x"
+  }
 }
